# desktop-ai

./: .env.example  .gitignore  DesktopAIAssistant.spec  README.md  desktop_ai_launcher.py  pyproject.toml
desktop_ai/: __init__.py  __main__.py  assistant.py  audio.py  avatar.py  cli.py  config.py  context.py  desktop_control.py  elevenlabs_client.py  interfaces.py  launcher.py  memory.py  openai_client.py  prompting.py  screen.py  types.py  voice_activation.py
desktop_ai_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
